k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  #namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: myacrkrishnasachin30.azurecr.io/backend:<IMAGE_TAG>
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  #namespace: production
spec:
  selector:
    app: backend
  ports:
    - port: 8086  # expose 8080
      targetPort: 8086
  type: ClusterIP
