k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  #namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: myacrkrishnasachin30.azurecr.io/frontend:<IMAGE_TAG>
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  #namespace: production
spec:
  selector:
    app: frontend
  ports:
    - port: 8080   # expose 8080
      targetPort: 8080
  type: ClusterIP
